<resources>
    <string name="app_name">Movie Viewer</string>
    <string name="failed_to_fetch_movie">Failed to fetch movie details</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="movie_poster_landscape">Movie Poster Landscape</string>
    <string name="loading">Loading...</string>
    <string name="name">Name:</string>
    <string name="genre">Genre:</string>
    <string name="advisory">Advisory Rating:</string>
    <string name="duration">Duration:</string>
    <string name="date">Release Date:</string>
    <string name="sypnosis">Sypnosis:</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="view_seat_map">View Seat Map</string>
    <string name="cast">Cast:</string>
    <string name="movie_screen">Movie Screen</string>
    <string name="failed_to_fetch_schedule">Failed to fetch scehdule</string>
    <string name="booking_maxed_out">Maximum of 10 reservation only</string>
    <string name="teather_glorieta_4">Teather: Glorieta 4</string>
    <string name="your_selected_seats">Your selected seats:</string>
    <string name="total">Total</string>
    <string name="php_0_00">Php 0.00</string>
    <string name="reserved">Reserved</string>
    <string name="available">Available</string>
    <string name="selected">Selected</string>
    <string name="none">NONE</string>
    <string name="an_error_has_occured">An error has occured while doin the request</string>
</resources>
